<?xml version="1.0"?>
<package format="3">
  <name>ALO</name>
  <version>0.3.0</version>
  <description>ALO</description>
  <maintainer email="xxx@gmail.com">xxx</maintainer>
  <license>wust</license>

  <!-- Common ROS 1 / ROS 2 dependencies -->
  <build_depend>ros_environment</build_depend>

  <!-- ROS 1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>


  <!-- ROS1/2 dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
